Fixed alignments

--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -154,7 +154,7 @@ a {
     list-style: none;
     margin: 0;
     padding: 0;
-    max-height: 60vh;
+    /* max-height: 60vh; */
     overflow-y: auto;
 }
 
